<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/barcode"
        android:textColorHint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/barcode"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium"
            tools:ignore="Deprecated" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColorHint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textColorHint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cost_usd"
        android:textColorHint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cost_usd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="@color/colorPrimary"
        android:text="@string/save"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        />


</LinearLayout>