<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <include layout="@layout/layout_camera_preview" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rateLabel"
                android:layout_width="@dimen/width_height_medium"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_small"
                android:layout_weight="2"
                android:hint="@string/exchange_rate_label"
                android:textColorHint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/exchange_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exchange_rate_label"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_currency"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="@dimen/width_height_medium"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />


        </LinearLayout>

        <!--        <View-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="1dp"-->
        <!--            android:background="@android:color/black" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:weightSum="6">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                android:layout_width="@dimen/width_height_medium"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_small"
                android:layout_weight="4"
                android:hint="@string/barcode"
                android:textColorHint="@color/colorPrimary"
                app:hintAnimationEnabled="false"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/barcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/barcode"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/add_new_product_button"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="@dimen/width_height_medium"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:src="@drawable/baseline_library_add_white_18"
                android:text="@string/add_product"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="@dimen/width_height_medium"
                android:background="@android:color/white" />

            <ImageButton
                android:id="@+id/products_list_button"
                style="?android:textAppearanceSmall"
                android:layout_width="0dp"
                android:layout_height="@dimen/width_height_medium"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/add_product"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                app:srcCompat="@drawable/baseline_list_24" />

        </LinearLayout>


    </RelativeLayout>
</RelativeLayout>